## The library that we make:
lib_LTLIBRARIES = libmeschach.la

AM_CFLAGS = @MINGW_CFLAG@

libmeschach_la_SOURCES = arnoldi.c bdfactor.c bkpfacto.c chfactor.c \
	conjgrad.c copy.c dmacheps.c err.c extras.c fft.c givens.c hessen.c \
	hsehldr.c init.c iter0.c iternsym.c itersym.c ivecop.c lanczos.c \
	lufactor.c machine.c matlab.c matop.c matrixio.c meminfo.c memory.c \
	memstat.c mfunc.c norm.c otherio.c pxop.c qrfactor.c schur.c \
	solve.c sparse.c sparseio.c spbkp.c spchfctr.c splufctr.c sprow.c \
	spswap.c submat.c svd.c symmeig.c update.c vecop.c version.c \
	zcopy.c zfunc.c zgivens.c zhessen.c zhsehldr.c zlufctr.c zmachine.c \
	zmatio.c zmatlab.c zmatop.c zmemory.c znorm.c zqrfctr.c zschur.c \
	zsolve.c zvecop.c

noinst_HEADERS = err.h iter.h machine.h matlab.h matrix.h matrix2.h \
	meminfo.h oldnames.h sparse.h sparse2.h zmatrix.h zmatrix2.h
